<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:text="@string/create_store"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/template1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#00AC2626"
                android:contentDescription="@string/template1"
                android:onClick="template1Click"
                tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,UsingOnClickInXml"
                tools:srcCompat="@drawable/ic_baseline_filter_1_24" />

            <ImageButton
                android:id="@+id/template2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/template2"
                tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,UsingOnClickInXml"
                tools:srcCompat="@drawable/ic_baseline_filter_2_24"
                android:onClick="template2Click" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/template3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/template3"
                tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,UsingOnClickInXml"
                tools:srcCompat="@drawable/ic_baseline_filter_3_24"
                android:onClick="template3Click" />

            <ImageButton
                android:id="@+id/template4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/template4"
                tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,UsingOnClickInXml"
                tools:srcCompat="@drawable/ic_baseline_filter_4_24"
                android:onClick="template4Click" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/template5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/template5"
                tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,UsingOnClickInXml"
                tools:srcCompat="@drawable/ic_baseline_filter_5_24"
                android:onClick="template5Click" />

            <ImageButton
                android:id="@+id/template6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/template6"
                tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,UsingOnClickInXml"
                tools:srcCompat="@drawable/ic_baseline_filter_6_24"
                android:onClick="template6Click" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/choose_template"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>