<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/leave_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:contentDescription="@string/content_description"
        android:focusable="true"
        android:onClick="disconnect"
        app:backgroundTint="@color/lightTeal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/log_out"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck,UsingOnClickInXml" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_round_white"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:onClick="myCategories"
            android:text="@string/my_categories"
            android:textAllCaps="false"
            android:textSize="16sp"
            tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_round_white"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:onClick="myProducts"
            android:text="@string/my_products"
            android:textAllCaps="false"
            android:textSize="16sp"
            tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_round_white"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:onClick="orders"
            android:text="@string/orders"
            android:textAllCaps="false"
            android:textSize="16sp"
            tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>